# LRVBLogitGLMM

./: CMakeLists.txt  README.md  compile_r_package.sh
LogitGLMMLRVB/: DESCRIPTION  NAMESPACE
LogitGLMMLRVB/R/: RcppExports.R  logit_glmm_lib.R
LogitGLMMLRVB/inst/: .Rhistory  .gitignore  analyze_influence_results.R  analyze_mcmc_results.R  analyze_python_results.R  analyze_results.R  black_box.R  densities_lib.R  loess_influence_function.R  optimize_lib.R  parallel.R  read_vb_python.R  rpython_interface.R  run_stan.R  run_vb.R  run_vb_stan_only.R  simulation.R  stan_results_to_json.R  test.R
LogitGLMMLRVB/inst/stan/: #test.stan#  logit_glmm.stan  logit_glmm_lrvb.stan  logit_glmm_lrvb_model.cpp  logit_glmm_model.cpp  test.stan  test_model.cpp
LogitGLMMLRVB/src/: Makevars  RcppExports.cpp  rcpp_wrapper.cpp
doc/: logistic_grads.lyx  logistic_grads.lyx~  model-lyxformat-474.lyx  model.lyx  model.lyx~
include/: eigen_includes.h  logit_glmm_model.h  logit_glmm_model_encoders.h  logit_glmm_model_parameters.h
src/: CMakeLists.txt  logit_glmm_model.cpp  logit_glmm_model_parameters.cpp
src/test/: CMakeLists.txt  logit_glmm_test.cpp  test_eigen.h
